# fibe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/fbe/: eqdsk.py  math.py  solver.py
src/fibe/: __init__.py  classes.py  eqdsk.py  solver.py
src/fibe/core/: classes.py  math.py
src/fibe/jax/: profiles.py  residual.py  solve.py
src/fibe/scripts/: bayesian_optimization.py  create_from_f_p_boundary.py  regrid_eqdsk.py
src/fibe/utils/: eqdsk.py  plotting.py
tests/: conftest.py  test_classes.py  test_fixed_pressure_solver.py  test_math.py  test_solver.py
tests/data/: test_input.geqdsk
