[build-system]
requires = ["setuptools>=80.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fibe"
description = "Fixed boundary tokamak equilibrium solver in pure Python"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICEN[CS]E"]
keywords = []
authors = [
  { name = "Aaron Ho", email = "aaronkho@mit.edu" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

dependencies = [
  "pip",
  "numpy",
  "pandas",
  "xarray",
  "netcdf4",
  "tables",
  "scipy",
  "contourpy",
  "shapely",
  "eqdsk",
  "megpy @ git+https://github.com/gsnoep/megpy.git@unstable",
]

[project.optional-dependencies]
dev = ["coverage", "pytest", "pytest-cov"]
docs = ["sphinx", "furo", "sphinx-rtd-theme"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://gitlab.com/aaronkho/fibe"
"Bug Reports" = "https://gitlab.com/aaronkho/fibe/-/issues"
"Source" = "https://gitlab.com/aaronkho/fibe"

[project.scripts]
fibe_regrid_geqdsk = "fibe.scripts.regrid_eqdsk:main"

[tool.setuptools.dynamic]
version = {attr = "fibe.__version__"}

[tool.pytest.ini_options]

